--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "google-maps-react": "^2.0.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
